- Added new music by LetsGo