@@ -1,5 +1,5 @@
 displayName = Devilish Arena
 author = GabeHasWon
-version = 1.1.0
+version = 1.2.0
 dllReferences = StructureHelper_v2.0.2
 modReferences = SubworldLibrary
